// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Storyshots components/StatusBadge/TestStatusBadge All Badges 1`] = `
<div>
  <div
    class="css-134efv6"
  >
    <div
      class="leafygreen-ui-701c3t"
      data-cy="test-status-badge"
    >
      Fail
    </div>
    <div
      class="leafygreen-ui-1yuwcm3"
      data-cy="test-status-badge"
    >
      Skip
    </div>
    <div
      class="leafygreen-ui-z8wldb"
      data-cy="test-status-badge"
    >
      Silent Fail
    </div>
    <div
      class="leafygreen-ui-1w3euls"
      data-cy="test-status-badge"
    >
      Pass
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots components/StatusBadge/TestStatusBadge Default 1`] = `
<div>
  <div
    class="leafygreen-ui-1w3euls"
    data-cy="test-status-badge"
  >
    Pass
  </div>
</div>
`;
